fix broken css

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 .ui.container {
     top: 2%!important;
     margin-top: 5%!important;
-    margin-left: 0%!important;
-    width: 925px!important;
+    margin-left: 5%!important;
+    width: 1000px!important;
 }
 
 .ui.modal {
+    position: absolute;
     top: 2%!important;
     margin-top: 5%!important;
     margin-left: 5%!important;
-    width: 925px!important;
+    width: 1000px!important;
+    left: 0%!important;
 }
 
 .table {
